--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ body {
     background-color: #f4f4f4;
     color: #333;
 }
-
+section{
+    height: 100vh;
+    
+}
 
 header {
     background-color: #333;
@@ -198,3 +201,4 @@ footer {
     padding: 20px;
     font-size: 1em;
 }
+
